--- a/RegioLindenITCourse/LindenITOpdracht.html
+++ b/RegioLindenITCourse/LindenITOpdracht.html
@@ -29,13 +29,14 @@
 
         <article>
             <h4>Video</h4>
-            <video id="movie" width="400" controls autoplay muted loop>
+            <video id="movie" width="400"  muted loop>
                 <source src="video/movie.mp4" type="video/mp4">
                 Your browser does not support HTML5 video.
             </video>
             <br><br>
             <button id="playmovie" class="win-button">Play</button>
             <button id="stopmovie" class="win-button">Pauze</button>
+            <button id="muteSound" class="win-button">Mute</button>
         </article>
 
 
